Fix overflow, finished

--- a/about-take-this/about.css
+++ b/about-take-this/about.css
@@ -927,6 +927,9 @@ footer li {
         flex-direction: column;
         gap:4rem;
     }
+    .social-icons {
+        margin-right: 0rem; 
+    }
 }
 @media (max-width:700px) {
     .footer-wrapper {
